"字符串方法"

--- a/字符串的方法.html
+++ b/字符串的方法.html
@@ -18,7 +18,30 @@
        //indexOf()是从前向后找
        //lastIndexOf()是从后向前找
 
+       /*
+       slice(start,[end])
+        可以从一个字符串中截取指定的内容，并将截取到内容返回，不会影响原变量
+        参数：
 
+        第一个：截取开始的位置（包括开始）  
+        第二个：截取结束的位置**（不包括结束）**  
+            可以省略第二个参数，如果省略则一直截取到最后  
+        可以传负数，如果是负数则从后往前数 
+       */
+      var strSub = str.slice(0,3);
+      console.log(strSub);
+
+      /*
+      substr()
+      和slice()基本一致，不同的是它第二个参数不是索引，而是截取的数量
+      substring()
+      和slice()基本一致，不同的是它不能接受负值作为参数，如果设置一个负值，则会自动修正为0，
+      substring()中如果第二个参数小于第一个，自动调整位置
+      oLowerCase()
+      将字符串转换为小写并返回
+      toUpperCase()
+      将字符串转换为大写并返回
+    */
     </script>
 </head>
 <body>
