--- a/字符串的方法.html
+++ b/字符串的方法.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>函数的隐藏参数</title>
     <script >
-        var str = "xiuandquan";
+        var str = "xiu,quan";
        /* 字符串底层是以字符数组的形式保存的
           ["x","i"....]
        */
@@ -28,20 +28,30 @@
             可以省略第二个参数，如果省略则一直截取到最后  
         可以传负数，如果是负数则从后往前数 
        */
-      var strSub = str.slice(0,3);
-      console.log(strSub);
+        var strSub = str.slice(0,3);
+        console.log(strSub);
 
-      /*
-      substr()
-      和slice()基本一致，不同的是它第二个参数不是索引，而是截取的数量
-      substring()
-      和slice()基本一致，不同的是它不能接受负值作为参数，如果设置一个负值，则会自动修正为0，
-      substring()中如果第二个参数小于第一个，自动调整位置
-      oLowerCase()
-      将字符串转换为小写并返回
-      toUpperCase()
-      将字符串转换为大写并返回
-    */
+        /*
+        substr()
+        和slice()基本一致，不同的是它第二个参数不是索引，而是截取的数量
+        substring()
+        和slice()基本一致，不同的是它不能接受负值作为参数，如果设置一个负值，则会自动修正为0，
+        substring()中如果第二个参数小于第一个，自动调整位置
+        oLowerCase()
+        将字符串转换为小写并返回
+        toUpperCase()
+        将字符串转换为大写并返回
+        */
+
+        /*
+        split()
+        可以根据指定内容将一个字符串拆分为一个数组
+        参数：
+        需要一个字符串作为参数，将会根据字符串去拆分数组
+        可以接收一个正则表达式，此时会根据正则表达式去拆分数组
+        */
+        var strSplit = str.split(",")
+        console.log(strSplit);
     </script>
 </head>
 <body>
