正则表达式

--- a/正则表达式语法.html
+++ b/正则表达式语法.html
@@ -6,11 +6,33 @@
     <script >
          /*量词 设置一个词出现多次
          {n} 正好出现n次
-        ​ {m,n} 出现mn次
+        ​ {m,n} 出现m到n次
         ​ {m,} m次以上
          */
         //ab出现三次
-         reg = /(ab){3}/
+         reg1 = /(ab){3}/;
+         //ab出现1到3次都可以
+         reg2 = /(ab){1,3}/;
+         /*
+         + 至少一个，相当于{1,}
+         * 0个或多个，相当于{0,}
+         ? 0个或1个，相当于{0,1}
+         */
+
+        //表示至少一个b
+         reg3 = /b+/;
+
+         //0个或多个b，相当于{0,}
+         reg4 = /b*/;
+
+         //0个或1个，相当于{0,1}
+         reg5 =/b?/;
+
+         //^表示以a开头
+         reg6 = /^a/;
+
+         //$表示以a结尾
+         reg6 = /a$/;
     </script>
 </head>
 <body>
