--- a/正则表达式语法.html
+++ b/正则表达式语法.html
@@ -33,6 +33,16 @@
 
          //$表示以a结尾
          reg6 = /a$/;
+
+         //判断一个字符串是否是手机号
+         //11位
+         //以1开头；
+         //第二位不能是不能是012；
+         //第三位后面任意数字9个
+         regTest = /^1[3-9][0-9]{9}$/;
+         console.log(regTest.test("18828223278"));
+         
+
     </script>
 </head>
 <body>
