--- a/DOM.html
+++ b/DOM.html
@@ -10,11 +10,24 @@
         文档指的是网页，一个网页就是一个文档
         对象指将网页中的每一个节点都转换为对象
         转换完对象以后，就可以以一种纯面向对象的形式来操作网页了 
+        模型：
+        模型用来表示节点和节点之间的关系，方便操作页面
+        节点（Node）
+        节点是构成网页的最基本的单元，网页中的每一个部分都可以称为是一个节点
+        虽然都是节点，但是节点的类型却是不同的
+        常用的节点
+        文档节点 （Document），代表整个网页  
+        元素节点（Element），代表网页中的标签  
+        属性节点（Attribute），代表标签中的属性  
+        文本节点（Text），代表网页中的文本内容 
         */
+       
     
     </script>
 </head>
 <body>
+    <!-- h1标签也是对象，aaa也是对象 -->
+    <h1>aaa</h1>
 
 </body>
 </html>
