--- a/事件/事件.html
+++ b/事件/事件.html
@@ -5,6 +5,8 @@
     <title>事件</title>
 </head>
 <body>
+    <!-- 这样写耦合度高，不建议这样写 -->
+    <!-- <button id="btn" onclick="alert('为啥点我')">我是一个按钮</button> -->
     <button id="btn">我是一个按钮</button>
     <script>
         /*
@@ -14,6 +16,16 @@
         1.可以在标签的事件属性中设置相应的JS代码；
         2.可以通过为对象的指定事件属性设置回调函数的形式来处理事件；
         */
+       //我们可以在事件对应的属性中设置一些js代码，这样当事件触发时，这些js代码就会执行
+       //获取按钮对象
+       var btn = document.getElementById("btn");
+       //为按钮的对应事件绑定楚廉署的形式响应事件
+       //当事件被触发时，对应的函数会调用
+       //绑定一个单击事件
+       btn.onclick = function(){
+           alert("别点了");
+       };
+    
     </script>
 
 </body>
