--- a/DOM/图片切换.html
+++ b/DOM/图片切换.html
@@ -11,19 +11,46 @@
         #outer{
             width: 500px;
             margin: 0 auto;
+            text-align: center;
         }
 
     </style>
 </head>
 <body> 
     <div id="outer">
-        <img src="D:/MyData/shizq18/Desktop/雪景壁纸/泰坦3.jpg">
+        <img src="./img/泰坦2.jpg" width="500px">
         <button id="prev">上一张</button>
         <button id="next">下一张</button>
+        <p id="info">共3页第1页</p>
 
     </div>
     <script type="text/javascript"> 
-       
+    var arrImg = ["./img/白2.jpg","./img/泰坦2.jpg","./img/泰坦3.jpg"];
+    var index = 1;
+    //getElementsByTagName返回的是数组
+    var buttonPre = document.getElementById("prev");
+        buttonPre.onclick = function(){
+        var imgPre = document.getElementsByTagName("img");
+        index--;
+        if(index<0){
+            index=arrImg.length-1;
+        }
+        imgPre[0].src = arrImg[index];
+        info.innerHTML = "共"+arrImg.length+"第"+index+"页";
+
+    }
+    var buttonNext = document.getElementById("next");
+        buttonNext.onclick = function(){
+        var imgNext = document.getElementsByTagName("img");
+        index++;
+        if(index>arrImg.length-1){
+            index=0;
+        }
+        imgNext[0].src = arrImg[index];
+        info.innerHTML = "共"+arrImg.length+"第"+index+"页";
+    }
+    var info =document.getElementById("info");
+    
     </script>
 
 </body>
