--- a/DOM/DOM全选练习.html
+++ b/DOM/DOM全选练习.html
@@ -5,8 +5,91 @@
     <title>全选练习</title>
 </head>
 <body> 
+    <form method="post" action="">
+        你爱好的运动是：<input type="checkbox" id="checkedAllBox"/>全选/全不选
+        <br/>
+        <input type="checkbox" name="items" value="足球"/>足球
+        <input type="checkbox" name="items" value="篮球"/>篮球
+        <input type="checkbox" name="items" value="羽毛球"/>羽毛球
+        <input type="checkbox" name="items" value="乒乓球"/>乒乓球
+        <br/>
+        <input type="button" id="checkedAllBtn" value="全选"/>
+        <input type="button" id="checkedNoBtn" value="全不选"/>
+        <input type="button" id="checkedRevBtn" value="反选"/>
+        <input type="button" id="sendBtn" value="提交"/>
+    </form>
     <script type="text/javascript"> 
-       
+       //全选按钮 绑定点击响应
+       var checkedAllBtn = document.getElementById("checkedAllBtn");
+       checkedAllBtn.onclick = function(){
+        //设置四个多选框选中 有共同的name
+        var items = document.getElementsByName("items");
+        //遍历元素 通过多选框的checked属性可以获取多选框的选中状态
+        for(var i=0;i<items.length;i++){
+            items[i].checked=true;
+        }
+       }
+
+
+       //全不选按钮 绑定点击响应
+       var checkedAllBtn = document.getElementById("checkedNoBtn");
+       checkedAllBtn.onclick = function(){
+        //设置四个多选框选中 有共同的name
+        var items = document.getElementsByName("items");
+        //遍历元素 通过多选框的checked属性可以获取多选框的选中状态
+        for(var i=0;i<items.length;i++){
+            items[i].checked=false;
+        }
+       }
+
+
+       //反选按钮
+       var checkedRevBtn = document.getElementById("checkedRevBtn");
+       checkedRevBtn.onclick = function(){
+        //设置四个多选框选中 有共同的name
+        var items = document.getElementsByName("items");
+        //遍历元素 通过多选框的checked属性可以获取多选框的选中状态
+        for(var i=0;i<items.length;i++){
+            // if( items[i].checked==false){
+            //     items[i].checked=true;
+            // }else{
+            //     items[i].checked=false;
+            // }  
+            //取反
+            items[i].checked=!items[i].checked;    
+        }
+       }
+
+
+       //提交按钮
+       var sendBtn = document.getElementById("sendBtn");
+       sendBtn.onclick = function(){
+        //设置四个多选框选中 有共同的name
+        var items = document.getElementsByName("items");
+        //遍历元素 通过多选框的checked属性可以获取多选框的选中状态
+        for(var i=0;i<items.length;i++){
+            if(items[i].checked){
+            alert(items[i].value);  
+            }  
+          }
+       }
+
+       //全选/全部选
+       //为全选/全部选添加点击事件
+       var checkedAllBox = document.getElementById("checkedAllBox");
+       var items = document.getElementsByName("items");
+       checkedAllBox.onclick = function(){
+
+        if(checkedAllBox.checked){
+            for(var i = 0;i<items.length;i++){
+                items[i].checked=true;
+            }
+        }else{
+            for(var i = 0;i<items.length;i++){
+                items[i].checked=false;
+            }
+        }
+       }
     </script>
 
 </body>
